--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -1,4 +1,4 @@
-name: Deploy to GKE
+name: Docker Build & Push to Docker Hub
 
 on:
   push:
@@ -6,22 +6,17 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-      - name: Build and push image
+      - name: Build and push users-service image
         run: |
-          docker build -t harithasridhar/users-service:latest .microservices/services/users
+          docker build -t harithasridhar/users-service:latest ./.microservices/services/users
           docker push harithasridhar/users-service:latest
-
-     
